# EasyOpenGL

./: .gitignore  learn.md
02_lighting_01_color/: 1.color.fs  main.cpp
02_lighting_02_basic_lighting/: 2.color.fs  main.cpp
02_lighting_03_materials/: 3.material.fs  3.material.vs  main.cpp
02_lighting_04_lightingmaps/: 3.light_cube.fs  3.material.fs  3.material.vs  camera.h  main.cpp
03_model_loading/: model.h
03win_model_loading/: CMakeLists.txt
03win_model_loading/src/: 1.model_loading.fs  1.model_loading.vs  fragmentShader.glsl  main.cpp  mesh.h  model.h  model_loading.cpp  shader.h  stb_image.h
04_Advanced_OpenGL_05_framebuffer/: CMakeLists.txt  framebuffer_screen.fs  framebuffer_screen.vs  main.cpp  model.h
WIN_OPENGL_TEMPLATE/src/: main.cpp  vertexShader.glsl
code/: CMakeLists.txt  main.cpp
getting_started_camera/: main.cpp
getting_started_matrix/: fragmentShader.glsl  glad.c  main.cpp  vertexShader.glsl
getting_started_shaders/: fragmentShader.glsl  shader.h  vertexShader.glsl
getting_started_textures/: main.cpp  vertexShader.glsl
win_04_Advanced_OpenGL_02_Stencil_testing/: README.md
win_04_Advanced_OpenGL_02_Stencil_testing/include/glad/: glad.h
win_04_Advanced_OpenGL_02_Stencil_testing/src/: glad.c  main.cpp
win_04_Advanced_OpenGL_05_framebuffers/src/: main.cpp
win_04_Advanced_OpenGL_06_cubemaps/: CMakeLists.txt
win_04_Advanced_OpenGL_06_cubemaps/src/: main.cpp
